@@ -15,10 +15,12 @@ package com.gs.dmn.maven;
 import com.gs.dmn.dialect.DMNDialectDefinition;
 import com.gs.dmn.log.BuildLogger;
 import com.gs.dmn.maven.configuration.components.DMNTransformerComponent;
+import com.gs.dmn.runtime.DMNRuntimeException;
 import com.gs.dmn.serialization.DefaultTypeDeserializationConfigurer;
 import com.gs.dmn.serialization.TypeDeserializationConfigurer;
 import com.gs.dmn.transformation.CompositeDMNTransformer;
 import com.gs.dmn.transformation.DMNTransformer;
+import com.gs.dmn.transformation.InputParameters;
 import com.gs.dmn.transformation.NopDMNTransformer;
 import com.gs.dmn.transformation.lazy.CompositeLazyEvaluationDetector;
 import com.gs.dmn.transformation.lazy.LazyEvaluationDetector;
@@ -27,26 +29,34 @@ import com.gs.dmn.transformation.template.TemplateProvider;
 import com.gs.dmn.validation.CompositeDMNValidator;
 import com.gs.dmn.validation.DMNValidator;
 import com.gs.dmn.validation.NopDMNValidator;
-import org.apache.maven.plugin.AbstractMojo;
 import org.apache.maven.plugins.annotations.Parameter;
-import org.apache.maven.project.MavenProject;
 
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
 
-public abstract class AbstractDMNMojo extends AbstractMojo {
-    @Parameter(defaultValue = "${project}", readonly = true, required = true)
-    public MavenProject project;
+public abstract class AbstractDMNMojo<NUMBER, DATE, TIME, DATE_TIME, DURATION, TEST> extends AbstractFileTransformerMojo<NUMBER, DATE, TIME, DATE_TIME, DURATION, TEST> {
+    @Parameter(required = false)
+    public String[] dmnValidators;
 
-    protected void checkMandatoryField(Object fieldValue, String fieldName) {
-        if (fieldValue == null) {
-            throw new IllegalArgumentException(String.format("'%s' is mandatory.", fieldName));
+    @Parameter(required = false)
+    public DMNTransformerComponent[] dmnTransformers;
+
+    @Parameter(required = false)
+    public String[] lazyEvaluationDetectors;
+
+    @Parameter(required = false, defaultValue = "com.gs.dmn.serialization.DefaultTypeDeserializationConfigurer")
+    public String typeDeserializationConfigurer;
+
+    @Parameter(required = false)
+    public Map<String, String> inputParameters;
+
+    protected DMNDialectDefinition<NUMBER, DATE, TIME, DATE_TIME, DURATION, TEST> makeDialect(Class<?> dialectClass) throws InstantiationException, IllegalAccessException {
+        try {
+            return (DMNDialectDefinition<NUMBER, DATE, TIME, DATE_TIME, DURATION, TEST>) dialectClass.getDeclaredConstructor().newInstance();
+        } catch (Exception e) {
+            throw new DMNRuntimeException(String.format("Cannot instantiate dialect '%s'", dialectClass == null ? null : dialectClass.getName()));
         }
-    }
-
-    protected DMNDialectDefinition makeDialect(Class<?> dialectClass) throws InstantiationException, IllegalAccessException {
-        return (DMNDialectDefinition) dialectClass.newInstance();
     }
 
     protected DMNValidator makeDMNValidator(String[] dmnValidatorClassNames, BuildLogger logger) throws Exception {
@@ -59,33 +69,33 @@ public abstract class AbstractDMNMojo extends AbstractMojo {
             try {
                 dmnValidators.add((DMNValidator) dmnValidatorClass.getConstructor(new Class[]{BuildLogger.class}).newInstance(new Object[]{logger}));
             } catch (Exception e) {
-                dmnValidators.add((DMNValidator) dmnValidatorClass.newInstance());
+                dmnValidators.add((DMNValidator) dmnValidatorClass.getDeclaredConstructor().newInstance());
             }
         }
         return new CompositeDMNValidator(dmnValidators);
     }
 
-    protected DMNTransformer makeDMNTransformer(DMNTransformerComponent[] dmnTransformerComponents, BuildLogger logger) throws Exception {
+    protected DMNTransformer<TEST> makeDMNTransformer(DMNTransformerComponent[] dmnTransformerComponents, BuildLogger logger) throws Exception {
         if (dmnTransformerComponents == null) {
-            return new NopDMNTransformer();
+            return new NopDMNTransformer<TEST>();
         }
-        List<DMNTransformer> dmnTransformers = new ArrayList<>();
+        List<DMNTransformer<TEST>> dmnTransformers = new ArrayList<>();
         for(DMNTransformerComponent dmnTransformerComponent : dmnTransformerComponents) {
-            DMNTransformer transformer;
+            DMNTransformer<TEST> transformer;
             Class<?> dmnTransformerClass = Class.forName(dmnTransformerComponent.getName());
             try {
-                transformer = (DMNTransformer) dmnTransformerClass.getConstructor(new Class[]{BuildLogger.class}).newInstance(new Object[]{logger});
+                transformer = (DMNTransformer<TEST>) dmnTransformerClass.getConstructor(new Class[]{BuildLogger.class}).newInstance(new Object[]{logger});
             } catch (Exception e) {
-                transformer = (DMNTransformer) dmnTransformerClass.newInstance();
+                transformer = (DMNTransformer<TEST>) dmnTransformerClass.getDeclaredConstructor().newInstance();
             }
 
             transformer.configure(dmnTransformerComponent.getConfiguration());
             dmnTransformers.add(transformer);
         }
-        return new CompositeDMNTransformer(dmnTransformers);
+        return new CompositeDMNTransformer<TEST>(dmnTransformers);
     }
 
-    protected LazyEvaluationDetector makeLazyEvaluationDetector(String[] detectorClassNames, BuildLogger logger, Map<String, String> inputParameters) throws Exception {
+    protected LazyEvaluationDetector makeLazyEvaluationDetector(String[] detectorClassNames, BuildLogger logger, InputParameters inputParameters) throws Exception {
         if (detectorClassNames == null) {
             return new NopLazyEvaluationDetector();
         }
@@ -93,9 +103,9 @@ public abstract class AbstractDMNMojo extends AbstractMojo {
         for(String detectorClassName: detectorClassNames) {
             Class<?> detectorClass = Class.forName(detectorClassName);
             try {
-                detectors.add((LazyEvaluationDetector) detectorClass.getConstructor(new Class[]{BuildLogger.class, Map.class}).newInstance(new Object[]{logger, inputParameters}));
+                detectors.add((LazyEvaluationDetector) detectorClass.getConstructor(new Class[]{InputParameters.class, BuildLogger.class}).newInstance(new Object[]{inputParameters, logger}));
             } catch (Exception e) {
-                detectors.add((LazyEvaluationDetector) detectorClass.newInstance());
+                detectors.add((LazyEvaluationDetector) detectorClass.getDeclaredConstructor().newInstance());
             }
         }
         return new CompositeLazyEvaluationDetector(detectors);
@@ -111,16 +121,21 @@ public abstract class AbstractDMNMojo extends AbstractMojo {
             return (TypeDeserializationConfigurer)deserializerClass.getConstructor(new Class[]{BuildLogger.class}).newInstance(new Object[]{logger});
         }
         catch (Exception ex) {
-            return (TypeDeserializationConfigurer)deserializerClass.newInstance();
+            return (TypeDeserializationConfigurer)deserializerClass.getDeclaredConstructor().newInstance();
         }
     }
 
     protected TemplateProvider makeTemplateProvider(String templateProviderClassName, BuildLogger logger) throws Exception {
         Class<?> templateProviderClass = Class.forName(templateProviderClassName);
         try {
-            return (TemplateProvider) templateProviderClass.newInstance();
+            return (TemplateProvider) templateProviderClass.getDeclaredConstructor().newInstance();
         } catch (Exception e) {
             throw new IllegalArgumentException(String.format("Cannot build template provider '%s'", templateProviderClass));
         }
+    }
+
+    @Override
+    protected InputParameters makeInputParameters() {
+        return new InputParameters(this.inputParameters);
     }
 }
